--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -91,10 +91,10 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
           <strong>Characteristics</strong>
         </th>
         <td>
-          Average location of <br> the mass of an object
+          magnitude
         </td>
 	      <td>
-          Average location of <br> the weight of an object 
+          direction 
         </td>
       </tr>
     </tbody>
@@ -319,7 +319,7 @@ The direction of a vector can be written as a unit vector by dividing the vector
 
   <SubSubSection title = "Vector representation" id = "vector_representation"/>
     <SubSubSubSection title = "Coordinates" id = "coordinates">
-      <Image src = '/sta/vectors_scalars/test.png' width = '5'/>
+      <Image src = '/sta/vectors_scalars/Coordinates.jpg' width = '5'/>
         <CalloutContainer slot = "cards">
           <CalloutCard title = "Review?">
             <p>
@@ -332,10 +332,10 @@ The direction of a vector can be written as a unit vector by dividing the vector
       </CalloutContainer>
     </SubSubSubSection>
     <SubSubSubSection title = "Angles" id = "angles">
-      <Image src = '/sta/vectors_scalars/test2.png' width = '5'/>
+      <Image src = '/sta/vectors_scalars/Angle.jpg' width = '5'/>
     </SubSubSubSection>
     <SubSubSubSection title = "Unit vectors" id = "unit_vectors_representation">
-      <Image src = '/sta/vectors_scalars/test3.png' width = '5'/>
+      <Image src = '/sta/vectors_scalars/UnitVectors.jpg' width = '5'/>
         <CalloutContainer slot = "cards">
           <CalloutCard title = "Review?">
             <p>
