--- a/src/pages/dyn/banked_turns.astro
+++ b/src/pages/dyn/banked_turns.astro
@@ -36,48 +36,6 @@ import Row from "../../components/Row.astro"
 </div>
 
 
-    <div hidden>
-        <PrairieDrawCanvas id = "rcm-cm-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xc-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xc-s1" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xc-s2" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-cm-cb" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xl-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xl-cd" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-xl-cf" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-er-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-et-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-ee-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-eg-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-ei-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-ec-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rcm-es-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ei-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ec-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xs-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xs-c3" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-el-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xc-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xc-c3" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ea-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xl-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-xl-cd" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ep-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-el-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-er-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ey-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-es-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-eo-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ek-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-eh-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-eb-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "rem-ew-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "ava-fp-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "ava-fr-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "ava-fm-c" width = "1" height = "1"/>
-        <PrairieDrawCanvas id = "ava-fc-c" width = "1" height = "1"/>
-    </div>
-
 <Section title="Banked turns"  id="banked_turns">
 
 <p>
@@ -118,7 +76,7 @@ import Row from "../../components/Row.astro"
         to understand friction and sliding, and then move on to a 2D
         rigid-body body to understand roll behavior.
       </p>
-        <Image src="/dyn/particle_kinetics/avb_09A186_small.jpg">
+        <Image src="/dyn/banked_turns/avb_09A186_small.jpg">
             <p class="figureCaption">
             <a
             target="_blank" rel="noopener noreferrer" href="http://www.setra.de/en/coaches-buses/topclass/models/s-411-hd.html">
@@ -132,7 +90,7 @@ import Row from "../../components/Row.astro"
             <a href=
             "http://media.daimler.com/dcmedia/0-921-657769-1-1183792-1-0-1-0-0-1-12639-854946-0-1-0-0-0-0-0.html">
             Daimler Global Media Site</a> (<a
-            href="avb_09A186.jpg">full-sized image</a>).
+            href="/dyn/banked_turns/avb_09A186.jpg">full-sized image</a>).
             </p>
         </Image>
         
@@ -171,7 +129,7 @@ import Row from "../../components/Row.astro"
         can see is approximately a half-circle with radius about 50
         m.
       </p>
-      <Image id="avb-ft" src="/dyn/particle_kinetics/avb_unterturkheim_border.png">
+      <Image id="avb-ft" src="/dyn/banked_turns/avb_unterturkheim_border.png">
         <p class="figureCaption">
           Satellite image of the Mercedes-Benz test track at
           Untertürkheim, on the <a
@@ -343,15 +301,15 @@ import Row from "../../components/Row.astro"
                 below.
             </p>
             <div class="imageBox width250">
-                <Image src="/dyn/particle_kinetics/avb_114255874071-32_vertical_small.jpg" alt="Mercedes cars on the Untertürkheim test track."/>
+                <Image src="/dyn/banked_turns/avb_114255874071-32_vertical_small.jpg" alt="Mercedes cars on the Untertürkheim test track."/>
                 <p class="caption">
                 Mercedes-Benz models 450 SL and 450 SLC in the front,
                 with models 450 SE and 450 SEL behind, on the
                 Untertürkheim test track in 1973. Image credit: <a
                 target="_blank" rel="noopener noreferrer" href="http://media.daimler.com/dcmedia/0-921-1090569-1-1309207-1-0-0-0-0-1-12759-614216-0-0-@ac.clink104771_3842-0-0-0-0.html">Daimler
                 Global Media Site</a> (<a
-                href="avb_114255874071-32_vertical.jpg">full-sized
-                image</a>, <a href="avb_114255874071-32.jpg">original
+                href="/dyn/banked_turns/avb_114255874071-32_vertical.jpg">full-sized
+                image</a>, <a href="/dyn/banked_turns/avb_114255874071-32.jpg">original
                 rotated image</a>).
                 </p>
             </div>
@@ -462,7 +420,7 @@ import Row from "../../components/Row.astro"
             43&#xb0; bank angle on the corners and 15&#xb0; banking on
             the straightaways.
           </p>
-        <Image alt="Bicycle riders in a velodrome" src="/dyn/rigid_body_kinetics/avb_3886159972_71e0dc52d8_o_600.jpg">
+        <Image alt="Bicycle riders in a velodrome" src="/dyn/banked_turns/avb_3886159972_71e0dc52d8_o_600.jpg">
             <p class="figureCaption">
               Bicycle riders on a banked turn at the <a
               target="_blank" rel="noopener noreferrer" href="http://velodrome.nscsports.org/">Blaine
@@ -475,7 +433,7 @@ import Row from "../../components/Row.astro"
               user flyinfoto</a> <a
               target="_blank" rel="noopener noreferrer" href="http://creativecommons.org/licenses/by/2.0/deed.en">(CC
               BY 2.0)</a> (<a
-              href="avb_3886159972_71e0dc52d8_o.jpg">full-sized
+              href="/dyn/banked_turns/avb_3886159972_71e0dc52d8_o.jpg">full-sized
               image</a>).
             </p>
         </Image>
@@ -528,12 +486,12 @@ import Row from "../../components/Row.astro"
               bikes</a> with fixed chains (no freewheeling, no gears)
               and <em>no brakes</em>. The corners are scarily steep:
             </p>
-              <Image src="/dyn/rigid_body_kinetics/avb_velodrome_track_small.jpg"> 
+              <Image src="/dyn/banked_turns/avb_velodrome_track_small.jpg"> 
               <!-- alt="woman leaning against a velodrome track">< -->
               <p class="caption">
                 Image credit: <a
                 target="_blank" rel="noopener noreferrer" href="http://cycletc.com/2011/06/30/track-cycling-we-have-a-what-nsc-velodrome-in-blaine-mn-by-nicole/">Tom
-                McGoldrick</a> (<a href="/dyn/rigid_body_kinetics/avb_velodrome_track.jpg">full
+                McGoldrick</a> (<a href="/dyn/banked_turns/avb_velodrome_track.jpg">full
                 sized image</a>).
 
               </p>
@@ -606,4 +564,4 @@ import Row from "../../components/Row.astro"
 
 </Layout>
 
-<script src="/dyn/rigid_body_kinetics/canvases.js" is:inline></script>
+<script src="/dyn/banked_turns/canvases.js" is:inline></script>
