--- a/src/pages/dyn/track_transition_curves.astro
+++ b/src/pages/dyn/track_transition_curves.astro
@@ -61,7 +61,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       acceleration for the passengers.
     </p>
 
-    <Image src="/dyn/particle_kinematics/highway.jpg" width="5">
+    <Image src="/dyn/track_transition_curves/highway.jpg" width="5">
       <p class="figureCaption">
         Aerial view of the <a
         href="http://en.wikipedia.org/wiki/High_Five_Interchange">High
@@ -78,7 +78,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         href="http://www.flickr.com/photos/attawayjl/">Jett
         Attaway</a> <a
         href="http://creativecommons.org/licenses/by/2.0/">(CC BY
-        2.0)</a> (<a href="avt_6159432119.jpg">full-sized
+        2.0)</a> (<a href="/dyn/track_transition_curves/avt_6159432119.jpg">full-sized
         image</a>).
       </p>
     </Image>
