mechanism design callout cards

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -104,6 +104,11 @@ import DisplayTable from "../../components/DisplayTable.astro"
         This application uses <a href = "/dyn/rigid_body_kinematics#constrained_motion">constrained motion.</a>
       </p>
     </CalloutCard>
+    <CalloutCard title = "Heads up!">
+      <p>
+        <strong><a href = "/md/Graphical_Linkage_Synthesis#Path_generation">Path generation</a></strong> builds on this content in mechanism design.
+      </p>
+    </CalloutCard>
   </CalloutContainer>
 </Section>
 
