--- a/src/pages/md/Graphical_Linkage_Synthesis.astro
+++ b/src/pages/md/Graphical_Linkage_Synthesis.astro
@@ -102,6 +102,16 @@ import Enumerate from "../../components/Enumerate.astro";
             can be used to  select different types of motion.
         </p>
         <Image src="/md/Graphical_Linkage_Synthesis/Path_gen_coupler_curve_sym_clr_2.png" width="7"> </Image>
+        <CalloutContainer slot = "cards">
+            <CalloutCard title = "Review?">
+                <p>
+                    Need a review of <strong>four-bar linkages?</strong>
+                </p>
+                <p>
+                    This content has also been in <a href="/dyn/four_bar_linkages">dynamics.</a>
+                </p>
+            </CalloutCard>
+        </CalloutContainer>
     </SubSection>
     <SubSection id="Position_generation" title="Position Generation">
         Position generation focuses on a link following a prescribed position. In this case, the orientation of the link
