create planar mechanism page

--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -15,7 +15,17 @@ import "../../public/static/css/course_home_pages.css"
         <div class="mt-sm-4 mt-2 row">
             <div class="col-md-7 col-12">
                 <SimplifiedView id="here" title="Mechanism design" title_style="h1 fw-bold" style="enumerate">
-        
+
+        <CourseCard href="/md/Planar_mechanisms" img_src="/md/Planar_mechanisims/Gruebler.png" title="Planar Mechanisms">
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Links and Joints'>Links and Joints</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#DOF'>DOF</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Transformation rules'>Transformation rules</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#4 bar linkage'>4 bar linkage</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Grashof Condition'>Grashof Condition</a></li>
+        </CourseCard>
+
+
+
         <CourseCard href="/md/Graphical_Linkage_Synthesis" img_src="/md/home_page/gls.png" title="Graphical linkage synthesis">
             <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Graphical_Linkage_Synthesis#GLS'>Graphical Linkage Synthesis Intro</a>
@@ -97,7 +107,7 @@ import "../../public/static/css/course_home_pages.css"
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Balancing#Two_plane' >Two Plane Balance</a></li>
         </ul>
         </CourseCard>
-        
+                    <li slot="list"><a href="/md/Planar_mechanisms?origin=coursemenu">Planar Mechanisms</a></li>
                     <li slot="list"><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical linkage synthesis</a></li>
                     <li slot="list"><a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a></li>
                     <li slot="list"><a href="/md/Cams?origin=coursemenu">Cams</a></li>
