add todo for planar mech

--- a/src/pages/md/Planar_mechanisms.astro
+++ b/src/pages/md/Planar_mechanisms.astro
@@ -27,6 +27,13 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
         </ul>
     </div>
 
+    <!--TODO: add description of page to md.astro
+        TODO: add example 4 and 6 bar linkages
+        TODO: look at overleaf for missing content
+        TODO: add callout cards
+        TODO: give equations backgrounds
+        TODO: give a good once-over to make sure all is well-->
+
     <SubSection title="Planar Mechanisms" id="Planar Mechanisms">
         <p>Mechanisms are devices that transform motions to some desirable pattern. From door hinges to the gears and levers found in a watch, mechanisms are very important. We will focus on planar (2-dimensional) mechanisms to better understand the design and analyses that go into each mechanism.</p>
     </SubSection>
