--- a/src/pages/md/Planar_mechanisms.astro
+++ b/src/pages/md/Planar_mechanisms.astro
@@ -32,7 +32,8 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
         TODO: look at overleaf for missing content
         TODO: add callout cards
         TODO: give equations backgrounds
-        TODO: give a good once-over to make sure all is well-->
+        TODO: give a good once-over to make sure all is well
+        TODO: fix image in course card-->
 
     <SubSection title="Planar Mechanisms" id="Planar Mechanisms">
         <p>Mechanisms are devices that transform motions to some desirable pattern. From door hinges to the gears and levers found in a watch, mechanisms are very important. We will focus on planar (2-dimensional) mechanisms to better understand the design and analyses that go into each mechanism.</p>
@@ -80,6 +81,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
     <SubSection title="4 bar linkage" id="4 bar linkage">
         <p>One of the most common mechanisms is a 4 bar linkage. This is because it 4 links connected with 4 full joints is one of the simplest 1 DOF systems.</p>
         <p>One example of a 4 bar linkage is a crank-rocker where the a rotary input results in an output that rocks back and forth.</p>
+        <Image src='/md/Planar_mechanisims/4Bar.png' width='7'> </Image>
         <p>Another example 4 bar linkage is a crank-slider, where transformation rule 1 is used to replace the rocker with a sliding joint.</p>
     </SubSection>
     <SubSection title="Grashof Condition" id="Grashof Condition">
