--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -17,21 +17,21 @@ import "../../public/static/css/course_home_pages.css"
                 <SimplifiedView id="here" title="Mechanism design" title_style="h1 fw-bold" style="enumerate">
 
         <CourseCard href="/md/Planar_mechanisms" img_src="/md/Planar_mechanisims/4Bar.png" title="Planar Mechanisms">
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Links and Joints'>Links and Joints</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#DOF'>DOF</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Transformation rules'>Transformation rules</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#4 bar linkage'>4 bar linkage</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Planar_mechanisms#Grashof Condition'>Grashof Condition</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Planar_mechanisms#Links and Joints'>Links and Joints</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Planar_mechanisms#DOF'>DOF</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Planar_mechanisms#Transformation rules'>Transformation rules</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Planar_mechanisms#4 bar linkage'>4 bar linkage</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Planar_mechanisms#Grashof Condition'>Grashof Condition</a></li>
         </CourseCard>
 
-        <CourseCard href="/md/Gears" img_src="/md/Gears/Gears.png" title="Planar Mechanisms">
-                <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#Gears'>Gears</a>
+        <CourseCard href="/md/Gears" img_src="/md/Gears/Gears.png" title="Gears">
+                <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#Gears'>Gears</a>
                     <ul class='list-group list-group-flush py-0'>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#Gear Types'>Gear Types</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#Gear Parts'>Gear Parts</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#Gear Teeth Intro'>Gear Teeth Intro</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#Standard Gear Applications'>Standard Gear Applications</a></li>
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='md/Gears#2 DOF Gear Applications'>2 DOF Gear Applications</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#Gear Types'>Gear Types</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#Gear Parts'>Gear Parts</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#Gear Teeth Intro'>Gear Teeth Intro</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#Standard Gear Applications'>Standard Gear Applications</a></li>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Gears#2 DOF Gear Applications'>2 DOF Gear Applications</a></li>
                     </ul>
                 </li>
         </CourseCard>
