--- a/src/pages/dyn/kiiking.astro
+++ b/src/pages/dyn/kiiking.astro
@@ -33,26 +33,28 @@ import DisplayTable from "../../components/DisplayTable.astro"
   </ul>
 </div>
 
-<Section title = "Kiiking" id = "kiiking"/>
+<Section title = "Kiiking" id = "kiiking">
+  Kiiking is...
+</Section>
 
 <SubSection title = "System design" id = "system_design">
-  <DisplayEquation title = "place" equation = "1" id = "1" background = "true"/>
+  <DisplayEquation equation = "" title = "System diagram" background = "true" id = "system_diagram"/>
 </SubSection>
 
 <SubSection title = "FBD" id = "fbd">
-  <DisplayEquation title = "place" equation = "1" id = ""/>
+  <DisplayEquation equation = "" title = "FBD" background = "true" id = "fbd"/>
 </SubSection>
 
 <SubSection title = "Kinematics" id = "kinematics">
-  <DisplayEquation title = "place" equation = "1" id = ""/>
+  <DisplayEquation equation = "" title = "Kinematics" background = "true" id = "kinematics"/>
 </SubSection>
 
 <SubSection title = "Kinetics" id = "kinetics">
-  <DisplayEquation title = "place" equation = "1" id = ""/>
+  <DisplayEquation equation = "" title = "Kinetics" background = "true" id = "kinetics"/>
 </SubSection>
 
 <SubSection title = "Algebra" id = "algebra">
-  <DisplayEquation title = "place" equation = "1" id = ""/>
+  <DisplayEquation equation = "" title = "Algebra" background = "true" id = "algebra"/>
 </SubSection>
 
 </Layout>
