--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -251,7 +251,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           even when the linkage could allow for greater movement. For
           example, to have a lifting platform the linkage below uses a
           crank limited to a smaller reciprocating input range. The
-          input center angle <InlineEquation title = "\\alpha_{||rm cent}"/> and range
+          input center angle <InlineEquation equation = "\\alpha_{\\rm cent}"/> and range
           <InlineEquation equation = "\\Delta \\alpha"/> can be adjusted to control the range of
           movement of the platform.
         </p>
